fixed some alignment on CSS file

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ p {
     border: 1px solid rgb(105, 141, 240);
     box-shadow: 10px #719ece;
   }
-  .container{
+  .containerNew{
     width: 100%;
     text-align: center;
     margin: 0;
